tests/testfiles/passing/invalid_identifiers/keyword_as_id_short.c
/* Keyword as identifier: short */
int main() {
    int short;
    short = 42;
}